ADD index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -4,17 +4,20 @@
     <head>
         <meta charset="utf-8">
         <title>Odin Recipes</title>
-
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
-        <h1> Odin Recipes</h1>
+        <div id="title"> Odin Recipes</div>
         
         <ol>
-            <li><a href="../odin-recipes/recipes/lasagna.html">Lasagna</a></li>
-            <li><a href="../odin-recipes/recipes/fried_rice.html">Quinoa Fried Rice</a></li>
-            <li><a href="../odin-recipes/recipes/lentil_curry.html">Lentil Curry</a></li>
-
+            <p>           
+            <li><button id="button"><a href="../odin-recipes/recipes/lasagna.html">Lasagna</a></button></li>
+            <br>            
+            <li><button id="button"><a href="../odin-recipes/recipes/fried_rice.html">Quinoa Fried Rice</a></button></li>
+            <br>           
+            <li><button id="button"><a href="../odin-recipes/recipes/lentil_curry.html">Lentil Curry</a></button></li>
+            </p>
         </ol>
 
     </body>
