--- a/recipes/fried_rice.html
+++ b/recipes/fried_rice.html
@@ -3,31 +3,38 @@
     <head>
         <meta charset="utf-8">
         <title>Fried Rice </title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
-        <h1>Quinoa Fried Rice Recipe</h1>
+        <div id="title">Quinoa Fried Rice Recipe</div>
         <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F3360130.jpg&w=596&h=596&c=sc&poi=face&q=85" width="250" alt="A picture of a quinoa fried rice in a white plate, that's set on a black table. Next to the friend rice dish is small plant in a brown little pot">
 
-        <h3>Description </h3>
-            <p> Learn to make this quick and easy quinoa fried rice! It substitues rice for quinoa for those wanting to try a different kind of friend rice. It can be used as a side dish or even eaten as the main meal! </p>      
+        <div class="headings">Description </div>
+            <p class="list"> Learn to make this quick and easy quinoa fried rice! It substitues rice for quinoa for those wanting to try a different kind of friend rice. It can be used as a side dish or even eaten as the main meal! </p>      
         
-        <h3>Ingredients </h3>
-            <h5>Quinoa:</h5>
+        <div class="headings">Ingredients </div>
+
+            <p class="sub-headings">Quinoa:</p>
                 <ul>
+                    <div class="list">
                     <li>1 1/2 cups of water </li>
                     <li>1 cup of quinoa </li>
                     <li>salt to taste </li>
+                    </div>
                 </ul>
-            <h5>Sauce:</h5>
+            <div class="sub-headings">Sauce:</div>
                 <ul>
+                    <div class="list">
                     <li>2 1/2 tablespoons soy sauce </li>
                     <li>1 1/2 tablespoons teriyaki sauce </li>
                     <li>3/4 teaspoon sesame oil </li>
+                    </div>
                 </ul>
 
-            <h5>Fried Quinoa:</h5>
+            <div class="sub-headings">Fried Quinoa:</div>
                 <ul>
+                    <div class="list">
                     <li>1 tablespoon olive oil, divided </li>
                     <li>2 carrots, peeled and chopped </li>
                     <li>1/4 onion, chopped </li>
@@ -36,17 +43,19 @@
                     <li>1/2 teaspoon minced fresh ginger </li>
                     <li>2 eggs, beaten </li>
                     <li>1/2 cup frozen peas </li>
+                    </div>
                 </ul>
 
 
-        <h3>Steps </h3>
+        <div class="headings">Steps </div>
             <ol>
+                <div class="list">
                 <li>Bring water and quinoa to a boil in a saucepan, season with salt. Reduce heat to medium-low, cover, and simmer until quinoa is tender and water has been absorbed, 15 to 20 minutes. Remove saucepan from heat and let sit for 5 minutes; fluff quinoa with a fork. Rerigerate until cool, 8 hours overnight. </li>
                 <li>Mix soy sauce, teriyaki sauce, and sesame oil together in a bowl until sauce is evenly mixed. </li>
                 <li>Heat 1 1/2 teaspoons oil in a large skillet over high heat; saute carrots and onion for 2 minutes. Add 2 scallions, garlic and ginger; saute until fragrant, about 2 minutes more. Add the remaining 1 1/2 teaspoons oil and quinoa; cook until heated through, about 2 minutes. </li>
                 <li>Stir sauce into quinoa mixture; cook and stir until evenly coated, about 2 minutes. </li>
                 <li>Make well in the center of the quinoa mixture. Pour eggs into the wel; cook an stir until eggs are scrambled and cooked through, 2 to 3 minutes. Add peas and cook until heated through, 2 to 3 minutes. Add remaining scallion. </li>
-
+                </div>
             </ol>
 
     </body>
