--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,18 +3,20 @@
     <head>
         <meta charset="utf-8">
         <title> Lasagna Recipe </title>
+        <link rel="stylesheet" href="styles.css">
 
     </head>
 
     <body>
-        <h1> Lasagna Recipe </h1>
+        <div id="title"> Lasagna Recipe </div>
         <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F7250725.jpg&w=596&h=596&c=sc&poi=face&q=85" width="250" alt="This is an image of a slice of beef lasagna that you will make if you follow the recipe in this web page">
 
-        <h3>Description</h3>
-            <p> This is a special recipe for lasagna! Rather than needing an oven to bake the lasagna, instead you can cook it on your stovetop and enjoy a tasty treat just as if it was cooked in the oven! It is fast and easy as it will only take you about 45 minutes to cook from scratch to ready to be eaten! </p>
+        <div class="headings">Description</div>
+            <p class="list"> This is a special recipe for lasagna! Rather than needing an oven to bake the lasagna, instead you can cook it on your stovetop and enjoy a tasty treat just as if it was cooked in the oven! It is fast and easy as it will only take you about 45 minutes to cook from scratch to ready to be eaten! </p>
     
-        <h3>Ingredients</h3>
+        <div class="headings">Ingredients</div>
             <ul>
+                <div class="list">
                 <li>1/2 pound ground beef </li>
                 <li>1/2 (28 ounce) jar spaghetti sauce </li>
                 <li>1 (14.5 ounch) can diced tomatoes </li>
@@ -26,17 +28,18 @@
                 <li>1 teaspoon black pepper </li>
                 <li>2 cups dried malfada noodles </li>
                 <li>1 cup shredded mozzarella cheese </li>
-
+                </div>
             </ul>
 
-        <h3>Steps</h3>
+        <div class="headings">Steps</div>
             <ol>
+                <div class="list">
                 <li>Heat large skillet over medium heat. Cook and stir beef in skillet until brown and crumbly, 5 to 7 minutes. Drain and discard grease. Add spaghetti sauce, tomatoes, onion, garlic, basil, oregano, salt and pepper. Cook over low heat until sauce is hot, about 15 minutes. </li>
                 <li>Meanwhile, fill a large pot with lightly salted water and bring to rolling boil. Cook mafalda noodles at a boil until tender yet firm to the bite, about 8 minutes. Drain. </li>
                 <li>Add cooked and drained noodles to the sauce and stir until completely coated. Sprinkle mozzarella chesse on top. </li>
                 <li>Set an oven rack about 6 inches from the heat source and preheat the oven's broiler. </li>
                 <li>Place the skiller under the hot broil and cook until cheese is golden and bubbly, 3 to 5 minutes. </li>
-
+                </div>
             </ol>
 
     </body>
