--- a/recipes/lentil_curry.html
+++ b/recipes/lentil_curry.html
@@ -3,17 +3,20 @@
     <head>
         <meta charset="utf-8">
         <title>Lentil Curry Recipe </title>
+        <link rel="stylesheet" href="styles.css">
+        
     </head>
 
     <body>
-        <h1>Lentil Curry Recipe </h1>
+        <div id="title">Lentil Curry Recipe </div>
         <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F7053775.jpg&w=596&h=596&c=sc&poi=face&q=85" width="250" alt="A close up picture of a lentil curry recipe. The curry is placed over white rice on a white plate with a green patter on the edges">
+        
+        <div class="headings">Description</div>
+            <p class="list">This red lentil curry is very quick and easy to prepare and tastes great! Most of the work will come from prepping the ingredients, as the cooking will be done in a pressure cooker where you won't need to do anything but wait! Not only is it mostly hands-off cookig, it tastes great and is a vegetarian meal! </p>
 
-        <h3>Description</h3>
-            <p>This red lentil curry is very quick and easy to prepare and tastes great! Most of the work will come from prepping the ingredients, as the cooking will be done in a pressure cooker where you won't need to do anything but wait! Not only is it mostly hands-off cookig, it tastes great and is a vegetarian meal!
-
-        <h3>Ingredients</h3>
+        <div class="headings">Ingredients</div>
             <ul>
+                <div class="list">
                 <li>5 cups water</li>
                 <li>1 (14.5 ounce) can diced tomatoes</li>
                 <li>1 (14 ounce) can light coconut milk</li>
@@ -25,15 +28,17 @@
                 <li>3 cloves garlic, minced</li>
                 <li>2 teaspoons vegetable bouillon base</li>
                 <li>1 teaspoon cayenne pepper</li>
+                </div>
 
             </ul>
 
-        <h3>Steps</h3>
+        <div class="headings">Steps</div>
             <ol>
+                <div class="list">
                 <li>Combine water, tomatoes, coconut milk, red lentils, spinach, onion, tomato paste, curry powder, garlic, bouillon base, and cayenne pepper in a multi-functional pressure cooker. Close and lock the lid </li>
                 <li>Select high pressure according to manufacturer's instructions; set timer for 15 minutes. Allow 10 to 15 minutes for pressure to build. </li>
                 <li>Release pressure using the natural-release method accordign to manufacturer's instructions, about 10 minutes. Unlock and remove the lid. Stir and let sit for 5 minutes before serving. </li>
-
+                </div>
             </ol>
 
     </body>
